try to fix mobile x overflow

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body.fade-in {
 
 
 header {
+    overflow-x: hidden;
     position: fixed; /* Add position relative to establish stacking context */
     width: 100%; /* Full width */
     top: 0;
@@ -45,6 +46,7 @@ header {
 }
 
 header2 {
+    overflow-x: hidden;
     position: fixed; /* Add position relative to establish stacking context */
     width: 100%; /* Full width */
     top: 0;
